--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -31,6 +31,15 @@ h4 {
 	color: black;
 }
 
+#post-btn {
+	justify-content: center;
+	text-align: center;
+	margin-left:auto;
+	position: absolute;
+	left: 0px;
+	width: 50px;
+}
+
 #logout-btn {
 	justify-content: center;
 	text-align: center;
