--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -31,11 +31,21 @@ h4 {
 	color: black;
 }
 
+#post-btn {
+	justify-content: center;
+	text-align: center;
+	margin-left:20px;
+	position: absolute;
+	left: 0px;
+	width: 50px;
+}
+
 #logout-btn {
 	justify-content: center;
 	text-align: center;
 	padding-left: 12px;
 	width: 70px;
+	margin-right: 20px;
 }
 
 a {
